# EzPC

./: .gitignore  CLAUDE.md  CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  README.md  sky.yaml
FSS/: SORT_README.md
FSS/src/: CMakeLists.txt  api.cpp  api.h  sort.cpp  sort.h
FSS/tests/: test_sort.cpp
GPU-MPC/: .skyignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  DCF.MD  Makefile  README.md  README_DCF_TEST.md  setup-fast.sh  setup-ultra-fast.sh  setup.sh  sky.yaml  test.cu  test.h
GPU-MPC/backend/: orca.h  orca_base.h  sigma.h
GPU-MPC/benchmarks/: CMakeLists.txt  fss_optimization_test.cu  mpc_benchmark.cu  mpc_benchmark.h
GPU-MPC/benchmarks/tasks/: scmp_comparison.cu
GPU-MPC/cmake/: BuildOptions.cmake  CUDAConfig.cmake  SystemDependencies.cmake
GPU-MPC/experiments/automation/: README.md  __init__.py  example_sweep.py  integration_test.py  parameter_sweep.py  result_validator.py
GPU-MPC/experiments/orca/: README.md  cnn.h  orca_evaluator.cu
GPU-MPC/experiments/orca/datasets/: gpu_data.cu  gpu_data.cuh
GPU-MPC/experiments/sigma/: CMakeLists.txt
GPU-MPC/ext/sytorch/: CMakeLists.txt
GPU-MPC/ext/sytorch/ext/bitpack/: CMakeLists.txt
GPU-MPC/ext/sytorch/ext/sci/cmake/: FetchSEAL.cmake
GPU-MPC/ext/sytorch/ext/sci/src/: CMakeLists.txt
GPU-MPC/fss/: CMakeLists.txt  LSS_SECURITY_WARNING.md  gpu_aes_shm_host.cu  gpu_aes_table.cu  gpu_and.h  gpu_avgpool.cuh  gpu_compare_aggregate.cu  gpu_compare_aggregate.cuh  gpu_compare_aggregate.h  gpu_conv2d.cu  gpu_conv2d.cuh  gpu_conv2d.h  gpu_dpf.cu  gpu_dpf.cuh  gpu_dpf.h  gpu_dpf_templates.h  gpu_fss_sort.cu  gpu_fss_sort.h  gpu_gelu.cu  gpu_gelu.h  gpu_layernorm.h  gpu_linear_helper.cuh  gpu_lut.cu  gpu_matmul.cuh  gpu_matmul.h  gpu_maxpool.cu  gpu_maxpool.cuh  gpu_mha.cuh  gpu_mha.h  gpu_mul.cuh  gpu_nexp.cuh  gpu_relu.cuh  gpu_relu.h  gpu_scalarmul.h  gpu_scmp.cu  gpu_scmp.h  gpu_select.cuh  gpu_softmax.cu  gpu_softmax.h  gpu_sstab.h  (+1 more)
GPU-MPC/fss/dcf/: gpu_dcf.cu  gpu_dcf.cuh  gpu_relu_host.cu  gpu_sgd.cu  gpu_sgd.cuh  gpu_truncate.cu
GPU-MPC/fss/optimizations/: dcf_kernel_tuning.cuh
GPU-MPC/nn/: CMakeLists.txt
GPU-MPC/nn/orca/: conv2d_layer.cuh  gpu_layer.h  maxpool_layer.cuh  relu_layer.cuh
GPU-MPC/skypilot/: README.md  sky.yaml
GPU-MPC/tests/: CMakeLists.txt
GPU-MPC/tests/fss/: dpf.cu  layernorm.cu  relu.cu  rmsnorm.cu  silu.cu  truncate.cu
GPU-MPC/tests/fss/dcf/: dcf.cu  maxpool.cu  stochastic_truncate.cu
GPU-MPC/tests/nn/orca/: fc_test.cu  relu_test.cu
GPU-MPC/utils/: CMakeLists.txt  gpu_comms.cuh  gpu_mem.cu  gpu_random.h  misc_utils.cu  misc_utils.cuh  secure_comms.h  secure_error.h
benchmarks/: CMakeLists.txt  fss_optimization_test.cu  mpc_benchmark.h  plan.md
benchmarks/tasks/: dcf_comparison.cu  lss_ops.cu  two_max.cu
cmake/: CompilerFlags.cmake  Datasets.cmake  ExternalDependencies.cmake
experiments/: CMakeLists.txt
experiments/automation/: experiment_runner.py
experiments/orca/: .gitignore  CMakeLists.txt  orca_dealer.cu
experiments/orca/datasets/: cifar10.h  mnist.h
experiments/sigma/: README.md  sigma.cu
ext/sytorch/ext/sci/src/: CMakeLists.txt
ext/sytorch/ext/sci/src/LinearHE/: CMakeLists.txt
ext/sytorch/include/sytorch/backend/: llama_base.h
fss/: CMakeLists.txt  gpu_aes_shm.cuh  gpu_aes_table.h  gpu_and.cu  gpu_avgpool.cu  gpu_compare_aggregate.cu  gpu_dpf.cuh  gpu_fss_helper.h  gpu_gelu.cuh  gpu_inverse.cu  gpu_inverse.cuh  gpu_layernorm.cu  gpu_layernorm.cuh  gpu_linear_helper.cu  gpu_lss.cu  gpu_lss.h  gpu_lut.cuh  gpu_matmul.cu  gpu_mha.cu  gpu_mul.cu  gpu_nexp.cu  gpu_relu.cu  gpu_scmp.h  gpu_select.cu  gpu_share_convert.cu  gpu_softmax.cuh  gpu_truncate.cu  gpu_truncate.cuh  gpu_window.cuh
fss/dcf/: gpu_dcf_host.cu  gpu_dcf_templates.h  gpu_maxpool.cu  gpu_maxpool.cuh  gpu_relu.cu  gpu_relu.cuh  gpu_truncate.cuh
fss/optimizations/: README.md  fss_memory_patterns.cuh
nn/orca/: avg_pool_layer.cuh  fc_layer.cuh  relu_extend_layer.cuh
tests/: CMakeLists.txt
tests/fss/: dpf.cu  dpf_drelu.cu  dpf_eval_all.cu  dpf_lut.cu  gelu.cu  lss_test.cu  mha.cu  rotary_embedding.cu  softmax.cu  truncate.cu
tests/fss/dcf/: aes.cu  dcf.cu  relu.cu  relu_extend.cu
tests/nn/orca/: conv2d_test.cu  maxpool_test.cu  relu_extend_test.cu
utils/: CMakeLists.txt  gpu_comms.cu  gpu_comms.cuh  gpu_data_types.h  gpu_mem.h  gpu_random.cu  gpu_stats.h  secure_mem.h  sigma_comms.h
